eksnode/src/kubelet/snapshots/eksnode__kubelet__credential__tests__it_serializes_credential_provider.snap
---
source: eksnode/src/kubelet/credential.rs
expression: deserialized
---
CredentialProviderConfig {
    kind: "CredentialProviderConfig",
    api_version: "kubelet.config.k8s.io/v1",
    providers: [
        CredentialProvider {
            name: "ecr-credential-provider",
            match_images: [
                "*.dkr.ecr.*.amazonaws.com",
                "*.dkr.ecr.*.amazonaws.com.cn",
                "*.dkr.ecr-fips.*.amazonaws.com",
                "*.dkr.ecr.*.c2s.ic.gov",
                "*.dkr.ecr.*.sc2s.sgov.gov",
            ],
            default_cache_duration: "12h",
            api_version: "credentialprovider.kubelet.k8s.io/v1",
            args: None,
            env: None,
        },
    ],
}
